tests/valid/shadowing/shadow_affine_param_ok.facet
fn f(x: affine isize) -> unrestricted isize {
    let x: unrestricted isize = 42;
    x
}
