tests/invalid/linear_affine_error/affine_double_use.facet
fn f(x: affine isize) -> affine isize {
  let a: affine isize = x;
  let b: affine isize = x;
  a
}
